--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     .playground {
       background-color: antiquewhite;
       position: relative;
-      width: 600px;
-      height: 600px;
+      width: 500px;
+      height: 500px;
     }
 
     #Mosquito {
       position: absolute;
-      width: 100px;
+      width: 80px;
     }
 
     .title-box {
@@ -23,8 +23,21 @@
       flex-direction: row;
       align-items: center;
     }
+
+    .main-container {
+      display: grid;
+      place-items: center;
+    }
+    .btn {
+      border-radius: 5px;
+      padding:5px 10px;
+      background-color: green;
+      color:white;
+      margin-top:5px;
+    }
+
   </style>
-  <body>
+  <body class="main-container" >
     <div class="title-box">
       <h1 id="gameStatus"></h1>
       <span id="secondsremaining"
@@ -35,7 +48,7 @@
     <div class="playground">
       <img id="Mosquito" onclick="hit()" src="./mosquito.png" alt="mosquito" />
     </div>
-    <button onclick="startGame()">Start Game</button>
+    <button  class="btn" onclick="startGame()">Start Game</button>
 
     <script>
       let counter = 0;
@@ -47,10 +60,15 @@
         let secondsRemaining = document.getElementById("secondsremaining");
         secondsRemaining.style.paddingLeft = 20 + "px";
         gameStarted = true;
+        
         let mosquito = document.getElementById("Mosquito");
         let time = setInterval(() => {
-          let i = Math.floor(Math.random() * 500) + 1;
-          let j = Math.floor(Math.random() * 500) + 1;
+          if(seconds>0 ) {
+            let secondsRemaining = document.getElementById("remaining").innerText = seconds;
+             seconds--
+          }
+          let i = Math.floor(Math.random() * 450) + 1;
+          let j = Math.floor(Math.random() * 450) + 1;
           mosquito.style.right = i + `px`;
           mosquito.style.top = j + `px`;
         }, 2000);
